# 0207-Relic-Recovery

./: .gitignore  PITCHME.md  README.md  test  toTC.sh
autoLogStuff/: autoGen.sh  current.md  current2.md  final.md  latexTemplate.latex  log.md  scripts  scriptsDump  test5.md  test6.md
cryptoboxDiagram/: .gitignore  Args.hs  Main.hs  Makefile  ProbabilityDrive.hs  cryptoboxDiagram.cabal  stack.yaml
ftc_app/: .gitignore  build.common.gradle  build.gradle  settings.gradle
ftc_app/DogeCV/: build.gradle
ftc_app/FtcRobotController/: build.gradle
ftc_app/TeamCode/: build.gradle
ftc_app/doc/javadoc/: index-all.html
ftc_app/doc/javadoc/com/qualcomm/ftccommon/: ConfigWifiDirectActivity.html
ftc_app/doc/javadoc/com/qualcomm/robotcore/hardware/: I2cController.html  I2cDevice.html  I2cDeviceImpl.html  I2cDeviceSynch.ReadWindow.html
ftc_app/gradle/wrapper/: gradle-wrapper.properties
ftc_app/openCVLibrary320/src/main/java/org/opencv/android/: AsyncServiceHelper.java  CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCameraView.java
ftc_app/openCVLibrary320/src/main/java/org/opencv/calib3d/: Calib3d.java
notebook/: AutoAdjustGlyphPlacer.md  AutomaticCooldowns.md  AutomaticFolding_Unfolding.md  AutomaticUnfolding.md  BotClass.md  BrakeToggle.md  ComputerVision.md  EnumController.md  FieldCentricDrive.md  GlyphDetection.md  HeadingAdjustment.md  InfiniteImprobabilityDrive.md  Invert.md  SafeStrafe.md  ScaledDriveSpeed.md
templates/: Class - Auton  Class - Teleop
texts/: debugIdeas  discordLog
(+148 files in other folders)
