name:                cryptoboxDiagram
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/cryptoboxDiagram#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable cryptoboxDiagram
  hs-source-dirs:      .

  main-is:             Main.hs

  other-modules:       


  build-depends:       base,
                       gloss
                            
  default-language:    Haskell2010

  ghc-options:         -Wall -threaded

